--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
        <li id="item6">Bags <button id="delete3">Delete</button></li>
     </ul>
      <!-- Exercise 6 -->
+
       <button id="Btn">Click Me</button>
       <p id="hoverText">Hover over me!</p>
       <input id="keyInput" placeholder="Type something...">
@@ -50,7 +51,8 @@
       
       <h3> Drawing Area</h3>
       <div id="drawArea"></div>
-      <!-- Exercise 7 -->
+
+      /* <!-- Exercise 7 --> */
          <style>
             .box {
             border: 1px solid #333;
