--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h3> Drawing Area</h3>
       <div id="drawArea"></div>
 
-      /* <!-- Exercise 7 --> */
+       <!-- Exercise 7 --> 
          <style>
             .box {
             border: 1px solid #333;
